--- a/style.css
+++ b/style.css
@@ -1,1 +1,59 @@
 /* Add your CSS code here */
+*{
+    font-family: Helvetica, Arial, sans-serif;
+    max-width: 700px;
+   margin: auto;
+  }
+  body {
+    min-width: 500px;
+    background-color: #e0eeee;
+}
+.profileBody {
+  display: inline-block;
+  background-color: white;
+  margin-top: 6px;
+  margin-left: 55px;
+  width: 75%;
+  height: 590px;
+  padding: 15px;
+}
+.header{
+  margin-bottom: 10px;
+}
+.header h1{
+    margin: 0 auto;
+    letter-spacing: 3px;
+    font-weight: 100px;
+    font-size: 50px;
+   
+}
+.header h2{
+    margin: 0 auto;
+    font-style: italic;
+    font-weight: 300px;
+    letter-spacing: 2px;
+    font-size: large;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.section{
+  margin: 10px 15px ;
+}
+ul{
+  margin:10px 0px ;
+ 
+ 
+}
+ul li{
+  margin-left: 0px;
+ font-weight: 600;
+ margin-bottom: 3px;
+  
+}
+p{
+  font-weight: 500;
+  font-size: 1.1em;
+}
+a{
+  text-decoration: none;
+}
